bk_ida/gobmkida/c3/does_capture_something
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/does_capture_something/src/engine/board.c:3065:30: error: use of undeclared identifier 'byte_9C689F'
if ( v2 != ( unsigned __int8)byte_9C689F[pos] 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/does_capture_something/src/engine/board.c:3068:30: error: use of undeclared identifier 'byte_9C688C'
if ( v2 != ( unsigned __int8)byte_9C688C[pos] 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/does_capture_something/src/obj/1/board.o] Error 1
